<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.nta.CameraFragmentViewModel.TrainingState" />
        <variable
            name="vm"
            type="com.example.nta.CameraFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.google.learning.brain.mobile.transfer.android.MainActivity">

        <TextureView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mode_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/inference_mode_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ChipTextAppearance"
                app:chipStartPadding="20dp"
                app:chipEndPadding="20dp"
                app:chipMinHeight="36dp"
                android:text="@string/inference_mode_title"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cl_inference_mode_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ChipTextAppearance"
                app:chipStartPadding="20dp"
                app:chipEndPadding="20dp"
                app:chipMinHeight="36dp"
                android:text="@string/inference_mode_title_cl"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/capture_mode_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ChipTextAppearance"
                app:chipStartPadding="20dp"
                app:chipEndPadding="20dp"
                app:chipMinHeight="36dp"
                android:text="@string/capture_mode_title"/>

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btn_reset_models"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/mode_chip_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="RESET MODELS AND RESTART APP">
        </Button>

        <LinearLayout
            style="@style/BigButton"
            android:visibility='@{vm.captureMode &amp;&amp; vm.neededSamples > 0}'
            android:background="@drawable/btn_big_gray"
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                style="@style/BigButtonTitle"
                android:text='@{String.format("Need %d samples", vm.neededSamples)}' />
        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:visibility='@{vm.neededSamples == 0 &amp;&amp; vm.trainingState == TrainingState.NOT_STARTED}'
            android:background="@drawable/btn_big_green"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.STARTED)}"
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/train_action" />
        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:visibility='@{vm.trainingState == TrainingState.STARTED}'
            android:background="@drawable/btn_big_yellow"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.PAUSED)}"
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/pause_action" />

            <!-- Losses on buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/BigButtonSubtitle"
                    android:visibility="@{vm.lastLossCL != null}"
                    android:text='@{String.format("CL Loss: %.3f", vm.lastLossCL)}' />

                <TextView
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/BigButtonSubtitle"
                    android:visibility="@{vm.lastLoss != null}"
                    android:text='@{String.format("TF Loss: %.3f", vm.lastLoss)}' />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:visibility='@{vm.neededSamples == 0 &amp;&amp; vm.trainingState == TrainingState.PAUSED }'
            android:background="@drawable/btn_big_green"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.STARTED)}"
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/resume_action" />

            <!-- Losses on buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/BigButtonSubtitle"
                    android:visibility="@{vm.lastLossCL != null}"
                    android:text='@{String.format("CL Loss: %.3f", vm.lastLossCL)}' />

                <TextView
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    style="@style/BigButtonSubtitle"
                    android:visibility="@{vm.lastLoss != null}"
                    android:text='@{String.format("TF Loss: %.3f", vm.lastLoss)}' />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/classes_bar"
            android:baselineAligned="false"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/view_finder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                style="@style/ClassButton"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "1"}'
                android:id="@+id/class_btn_1"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/class_img_1"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_triangle" />

                <TextView
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:inferenceText='@{vm.confidence["1"]}'
                    app:captureText='@{vm.numVisualSamples["1"]}' />
            </LinearLayout>

            <LinearLayout
                style="@style/ClassButton"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "2"}'
                android:id="@+id/class_btn_2"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/class_img_2"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_circle" />

                <TextView
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:inferenceText='@{vm.confidence["2"]}'
                    app:captureText='@{vm.numVisualSamples["2"]}' />
            </LinearLayout>

            <LinearLayout
                style="@style/ClassButton"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "3"}'
                android:id="@+id/class_btn_3"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/class_img_3"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_x" />

                <TextView
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:inferenceText='@{vm.confidence["3"]}'
                    app:captureText='@{vm.numVisualSamples["3"]}' />
            </LinearLayout>

            <LinearLayout
                style="@style/ClassButton"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "4"}'
                android:id="@+id/class_btn_4"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/class_img_4"
                    android:layout_height="50dp"
                    android:layout_width="match_parent"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_square" />

                <TextView
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:inferenceText='@{vm.confidence["4"]}'
                    app:captureText='@{vm.numVisualSamples["4"]}' />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
